--- a/jenkinsfile
+++ b/jenkinsfile
@@ -18,7 +18,7 @@ node {
     }
 
     stage('Livraison dans DockerHub') {
-        docker.withRegistry('https://registry.hub.docker.com', 'dockerhub-credential') {
+        docker.withRegistry('https://registry.hub.docker.com', 'dockerHub-credential') {
             app.push("${env.BUILD_NUMBER}")
             app.push("1.0")
         }
